# PathAI

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/adapter/: README.md  __init__.py  constants.py  errors.py  graph.py  notifications.py  replanner.py  schemas.py  service.py  signals.py
backend/app/agents/: README.md  __init__.py  checkpointing.py  constants.py  contracts.py  demo_orchestration.py  errors.py  graph.py  nodes.py  service.py  state.py  tracing.py
backend/app/assessment/: README.md  __init__.py  constants.py  errors.py  graph.py  llm.py  models.py  question_bank.py  rubric.py  schemas.py  service.py
backend/app/core/: config.py  errors.py  logging.py  settings.py
backend/app/critic/: README.md  __init__.py  constants.py  errors.py  graph.py  llm.py  rubric.py  schemas.py  service.py
backend/app/curriculum/: README.md  __init__.py  constants.py  errors.py  graph.py  llm.py  models.py  planner.py  rules.py  schemas.py  service.py
backend/app/db/: README.md  __init__.py  mongo_client.py  mongodb.py
backend/app/evaluation/: README.md  __init__.py  ablations.py  baselines.py  constants.py  datasets.py  errors.py  metrics.py  reports.py  rubrics.py  schemas.py  service.py
backend/app/fixtures/: __init__.py  canonical_demo.py  mock_agents.py  workspace_factory.py
backend/app/jobs/: README.md
backend/app/llm/: README.md  __init__.py  client.py  config.py  contracts.py  errors.py  mock.py  (+9 more)
backend/scripts/: reset_platform_data.py  run_dev.py
(+684 files in other folders)
