[project]
name = "pathai-backend"
version = "0.1.0"
description = "FastAPI backend for PathAI."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

